# vulcan-retrieval

./: .gitignore  CLAUDE.md  README.md  notes.md  pyproject.toml  requirements-hpc.txt
.github/workflows/: tests.yml
data/: notes.md
docs/: failed_approaches.md  job65815_badgrad_investigation.md
docs/route_b/: README.md  b0a_decision_record.txt  b0c_reproducibility_artifact.json  b0c_reproducibility_artifact.txt  h2s_boundary_table.json  h2s_boundary_table.py  h2s_dominance_results.json  h2s_dominance_sweep.py
docs/route_b/harness/: README.md  b0_6_chem_probe.py  b0_6_spectrum_probe.py  b0c_artifact.py  eta_c_linearity.py  g1_convergence.py  g1_reference.py  g2_seeds.py  g3_flux_closure.py  g4_subsaturated.py  g5_ladders.py  g6_sensitivity.py  gate_common.py  probe_provenance_2026_07_13.json  probe_results_2026_07_13.txt  w107b_fixture.py  w107b_spectrum.py
docs/route_b/harness/results/: w107b_g1_20260714_064031.json  w107b_g1_20260714_064031.npz  w107b_g1_20260714_070038.json  w107b_g1_20260714_070038.npz  (+7 more)
examples/: fig_exojax_sensitivity.py  quickstart.ipynb  run_demo.py  run_figs.py
retrieval_framework/: README.md  pipeline.py  plot_smc.py  validate_warm.py
runs/w39b_smc_retrieval/: README.md  case.py  run_nas_w39b.pbs
runs/w39b_smc_retrieval/forensics_65815/: VJAX_W39B_SMC.o65815  bad_grad_stage000_sweep1.npz  bad_grad_stage000_sweep2.npz  bad_grad_stage000_sweep3.npz  bad_grad_stage000_sweep5.npz  bad_grad_stage000_sweep6.npz  bad_grad_stage001_sweep1.npz  bad_grad_stage001_sweep2.npz  bad_grad_stage001_sweep3.npz  bad_grad_stage001_sweep4.npz  bad_grad_stage001_sweep5.npz  bad_grad_stage001_sweep6.npz  bad_grad_stage002_sweep1.npz  bad_grad_stage002_sweep2.npz
runs/w39b_smc_retrieval/overrides/: demo.json
scripts/zco_information/: build_zco_jacobians.py  build_zco_walk.py  compare_offset_models.py  fig_zco_disequilibrium.py  fig_zco_geometry.py  fig_zco_information.py  notes.md  zco_lib.py
src/retrieval_framework/: __init__.py  calibrate_count_max.py  config_schema.py  pipeline.py  plot_smc.py  probe_memory.py  retrieval_forward.py  run_smc.py  smoke_retrieval.py  tp_profile.py  validate_env.py  validate_warm.py
src/retrieval_framework/forward/: config.py  exojax_rt.py  h2s_boundary.py  sensitivity.py  vulcan_chem.py
tests/: conftest.py  test_binning.py  test_condensation_inference_gate.py  test_condensation_live_tp.py  test_evidence_semantics.py  test_h2s_boundary.py  test_init_state.py  test_opacity_cache_paths.py  test_set_observations.py  test_smc_gaussian.py  test_smooth_rainout_prep.py  test_validate_env.py  test_warm_extrap.py  test_warm_reject.py  test_zco_offsets.py
tools/: bootstrap_nas_env.pbs
validation/: broadening_ab.py  diag_photo_off_ad.py  diag_photo_off_convergence.py  diag_photo_off_culprit.py  diag_photo_off_steady_state.py  diag_photo_off_sulfur.py  diag_photo_off_tangent.py  diag_warm_stall_tangent.py  elemental_audit.py  mala_reversibility.py  notes.md  resolution_ladder.py  smoke_coref.py  smoke_test.py  smoke_zco.py  top_pressure_ladder.py  validate_wide_chem.py
validation/badgrad_65815/: analyze_badgrad.py  analyze_badgrad2.py  analyze_badgrad3.py  replay_badgrad.py  replay_badgrad_v2.py  replay_badgrad_v3.py
vulcan-jwst-tool/examples/: api_walkthrough.ipynb
vulcan-retrieval/examples/: quickstart.ipynb
(+2 files in other folders)
