# vulcan-retrieval: the differentiable VULCAN-JAX -> ExoJAX forward model
# (retrieval_framework.forward) plus the SMC / forward-mode-MALA retrieval
# framework. EDITABLE install is the supported dev mode (pip install -e . --no-deps
# in a checkout of this repo); a site-packages/TestPyPI install
# works for the code but must set VULCAN_PROJECT_ROOT so the repo data/ tree
# (observations + opacity caches) resolves -- see forward/config.py.
#
# NOTE the vulcan-jax dependency below is the TestPyPI release line. The exact
# validated chemistry commit for HPC runs is pinned in requirements-hpc.txt (repo root).
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulcan-retrieval"
dynamic = ["version"]
description = "Differentiable VULCAN-JAX photochemistry -> ExoJAX transmission forward model and SMC/forward-mode-MALA retrieval framework (WASP-39b)"
readme = "README.md"
# 3.10 floor is deliberate and load-bearing: the NAS GH200 deploy env (pyt2_8_gh)
# is Python 3.10.18, the code is 3.10-clean (no 3.11-only stdlib/syntax), and the
# HPC-validated jax/jaxlib 0.6.2 is the last jax line that supports 3.10.
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "Isaac Malsky" }]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "jax>=0.6.2",
    "exojax==2.2.3",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib",
    "corner",
    "tqdm",
    "vulcan-jax>=0.3.0",  # 0.3.0 enforces the condensation-not-differentiable contract at the AD entry points (F1-F5); 0.2.0 was the YAML-only config API
]

[project.urls]
Homepage = "https://github.com/imalsky/vulcan-retrieval"
Repository = "https://github.com/imalsky/vulcan-retrieval"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.11", "build>=1.2", "twine>=5"]

[tool.setuptools]
package-dir = { "" = "src" }
# No package data on purpose: every data file (observations, opacity caches,
# run outputs) lives at the repo-root data/ tree, addressed via VULCAN_PROJECT_ROOT.
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "retrieval_framework._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# env-before-import contract: vulcan_chem sets the VULCAN_JAX_* import-frozen env
# vars (and jax x64) BEFORE importing jax/vulcan_jax; manuscript figure scripts
# sys.path-insert jax_paper/scripts for the shared _common house style.
"src/retrieval_framework/forward/vulcan_chem.py" = ["E402"]
"examples/run_demo.py" = ["E402"]
"examples/run_figs.py" = ["E402"]
"examples/fig_exojax_sensitivity.py" = ["E402"]
"scripts/zco_information/fig_zco_information.py" = ["E402"]
"scripts/zco_information/fig_zco_disequilibrium.py" = ["E402"]
"scripts/zco_information/fig_zco_geometry.py" = ["E402"]
